[package]
name = "exifmap"
version = "0.1.0"
authors = ["Wieland Hoffmann <themineo@gmail.com>"]

[dependencies]
geojson = "0.12"
rexiv2 = "0.6"
walkdir = "2"
failure = "0.1"
log = "0.4"
env_logger = "0.5"
serde_json = "1.0"
rayon = "1.0"
gexiv2-sys = "1.0"
magick_rust = "0.10"
libc = "0.2"
clap = "2.32"